--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get a 1:1 styled clone of an element",
   "main": "index.js",
   "scripts": {
-    "build": "rollup src/index.js --format umd --name getStyledClone --output index.js",
+    "build": "rollup --config rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,9 +17,12 @@
     "url": "https://github.com/mystrdat/get-styled-clone/issues"
   },
   "homepage": "https://github.com/mystrdat/get-styled-clone#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "rollup": "^0.41.6"
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^3.0.7"
   }
 }
